--- a/styles/styles.css
+++ b/styles/styles.css
@@ -241,18 +241,18 @@ main img {
 
 /* sections */
 main .section {
-  padding: 64px 16px;
+  padding: 0 0 16px;
 }
 
 @media (width >= 600px) {
   main .section {
-    padding: 64px 32px;
+    padding: 0 0 32px;
   }
 }
 
 @media (width >= 900px) {
   main {
-    max-width: 1650px;
+    max-width: 100%;
     margin: 50px auto 0;
   }
 }
